--- a/config.conf
+++ b/config.conf
@@ -1,5 +1,36 @@
 Server {
-	host : 127.0.0.1;
+	host : 255.255.255.25;
 	listen : 80;
 	server_name : localhost;
+	root : /home/linaina;
+	client_max_body_size : 10;
+	error_page : 404  /404.html;
+	error_page : 500 /500.html;
+	index : index.html;
+	  location{	# gestion des requettes
+		pattern : /;
+		cgi: .php static/cgi-bin/php-cgi;
+        cgi: .py /usr/local/bin/python3;
+		http_methode : GET;
+		autoindex : on; 
+		return : 301/index.html; 
+		root : /home/linaina;
+	}
+	location{ # telechargement des fichiers
+		pattern : /.mp4;
+		pattern : /.JPEG;
+		upload: cgi-bin/upload;
+		methode_http : GET, POST, DELETE;
+		autoindex : on;
+		return : 301/index.html;
+		root : /home/linaina/downloals;
+	}
+	location{ # chargement dans le serveur
+		pattern : /upload;
+		methode_http : post;
+		autoindex : on;
+		root : /;
+		upload : upload;
+		return :301/index.html;
+	}
 }
