--- a/config.conf
+++ b/config.conf
@@ -7,30 +7,30 @@ Server {
 	error_page : 404  /404.html;
 	error_page : 500 /500.html;
 	index : index.html;
-	  location{	# gestion des requettes
+	location{
 		pattern : /;
-		cgi: .php static/cgi-bin/php-cgi;
-        cgi: .py /usr/local/bin/python3;
+		cgi : .php static/cgi-bin/php-cgi;
+		Cgi : .py /usr/local/bin/python3;
 		http_methode : GET;
-		autoindex : on; 
-		return : 301/index.html; 
+		autoindex : on;
+		return : 301/index.html;
 		root : /home/linaina;
-	}
-	location{ # telechargement des fichiers
+		}
+	location{
 		pattern : /.mp4;
-		pattern : /.JPEG;
-		upload: cgi-bin/upload;
+		i_pattern : /.JPEG;
+		upload : cgi-bin/upload;
 		methode_http : GET, POST, DELETE;
 		autoindex : on;
 		return : 301/index.html;
 		root : /home/linaina/downloals;
 	}
-	location{ # chargement dans le serveur
+	location{
 		pattern : /upload;
 		methode_http : post;
 		autoindex : on;
 		root : /;
 		upload : upload;
-		return :301/index.html;
+		return : 301/index.html;
 	}
 }
