--- a/config.conf
+++ b/config.conf
@@ -1,6 +1,80 @@
 Server {
-	host : 255.255.255.25;
-	listen : 80;
+	host : 127.0.0.1;
+	listen : 6565;
+	server_name : localhost;
+	root : /home/linaina;
+	client_max_body_size : 10;
+	error_page : 404  /404.html;
+	error_page : 500 /500.html;
+	index : index.html;
+	location{
+		pattern : /;
+		cgi : .php static/cgi-bin/php-cgi;
+		Cgi : .py /usr/local/bin/python3;
+		http_methode : GET;
+		autoindex : on;
+		return : 301/index.html;
+		root : /home/linaina;
+		}
+	location{
+		pattern : /.mp4;
+		i_pattern : /.JPEG;
+		upload : cgi-bin/upload;
+		methode_http : GET, POST, DELETE;
+		autoindex : on;
+		return : 301/index.html;
+		root : /home/linaina/downloals;
+	}
+	location{
+		pattern : /upload;
+		methode_http : post;
+		autoindex : on;
+		root : /;
+		upload : upload;
+		return : 301/index.html;
+	}
+}
+
+Server {
+	host : 127.0.0.2;
+	listen : 8080;
+	server_name : localhost;
+	root : /home/linaina;
+	client_max_body_size : 10;
+	error_page : 404  /404.html;
+	error_page : 500 /500.html;
+	index : index.html;
+	location{
+		pattern : /;
+		cgi : .php static/cgi-bin/php-cgi;
+		Cgi : .py /usr/local/bin/python3;
+		http_methode : GET;
+		autoindex : on;
+		return : 301/index.html;
+		root : /home/linaina;
+		}
+	location{
+		pattern : /.mp4;
+		i_pattern : /.JPEG;
+		upload : cgi-bin/upload;
+		methode_http : GET, POST, DELETE;
+		autoindex : on;
+		return : 301/index.html;
+		root : /home/linaina/downloals;
+	}
+	location{
+		pattern : /upload;
+		methode_http : post;
+		autoindex : on;
+		root : /;
+		upload : upload;
+		return : 301/index.html;
+	}
+}
+
+Server	{
+	host : 127.0.0.3;
+	listen : 4040;
 	server_name : localhost;
 	root : /home/linaina;
 	client_max_body_size : 10;
