--- a/config.conf
+++ b/config.conf
@@ -11,7 +11,7 @@ Server {
 		pattern : /;
 		cgi : .php static/cgi-bin/php-cgi;
 		Cgi : .py /usr/local/bin/python3;
-		http_methode : GET;
+		methode : GET;
 		autoindex : on;
 		return : 301/index.html;
 		root : /home/linaina;
@@ -20,14 +20,14 @@ Server {
 		pattern : /.mp4;
 		i_pattern : /.JPEG;
 		upload : cgi-bin/upload;
-		methode_http : GET, POST, DELETE;
+		methode : GET, POST, DELETE;
 		autoindex : on;
 		return : 301/index.html;
 		root : /home/linaina/downloals;
 	}
 	location{
 		pattern : /upload;
-		methode_http : post;
+		methode : post;
 		autoindex : on;
 		root : /;
 		upload : upload;
