--- a/config.conf
+++ b/config.conf
@@ -1,6 +1,80 @@
 Server {
-	host : 127.0.0.12;
-	listen : 1146;
+	host : 127.0.0.1;
+	listen : 8050;
+	server_name : localhost;
+	root : /home/linaina;
+	client_max_body_size : 10;
+	error_page : 404  /404.html;
+	error_page : 500 /500.html;
+	index : index.html;
+	location{
+		pattern : /;
+		cgi : .php static/cgi-bin/php-cgi;
+		Cgi : .py /usr/local/bin/python3;
+		methode : GET;
+		autoindex : on;
+		return : 301/index.html;
+		root : /home/linaina;
+		}
+	location{
+		pattern : /.mp4;
+		i_pattern : /.JPEG;
+		upload : cgi-bin/upload;
+		methode : GET, POST, DELETE;
+		autoindex : on;
+		return : 301/index.html;
+		root : /home/linaina/downloals;
+	}
+	location{
+		pattern : /upload;
+		methode : post;
+		autoindex : on;
+		root : /;
+		upload : upload;
+		return : 301/index.html;
+	}
+}
+
+Server {
+	host : 127.0.0.1;
+	listen : 8045;
+	server_name : localhost;
+	root : /home/linaina;
+	client_max_body_size : 10;
+	error_page : 404  /404.html;
+	error_page : 500 /500.html;
+	index : index.html;
+	location{
+		pattern : /;
+		cgi : .php static/cgi-bin/php-cgi;
+		Cgi : .py /usr/local/bin/python3;
+		methode : GET;
+		autoindex : on;
+		return : 301/index.html;
+		root : /home/linaina;
+		}
+	location{
+		pattern : /.mp4;
+		i_pattern : /.JPEG;
+		upload : cgi-bin/upload;
+		methode : GET, POST, DELETE;
+		autoindex : on;
+		return : 301/index.html;
+		root : /home/linaina/downloals;
+	}
+	location{
+		pattern : /upload;
+		methode : post;
+		autoindex : on;
+		root : /;
+		upload : upload;
+		return : 301/index.html;
+	}
+}
+
+Server {
+	host : 127.0.0.1;
+	listen : 8044;
 	server_name : localhost;
 	root : /home/linaina;
 	client_max_body_size : 10;
